Fix linked nominee text overflow (#3481)

--- a/packages/web/app/components/eto/registration/pages/Nominee/Nominee.module.scss
+++ b/packages/web/app/components/eto/registration/pages/Nominee/Nominee.module.scss
@@ -1,5 +1,3 @@
-$border-color: $neu-light-blue-grey-two;
-
 .header {
   @include font-headline-medium;
 
@@ -26,42 +24,48 @@ $border-color: $neu-light-blue-grey-two;
 
 .nominee-chosen-section {
   display: grid;
-  grid-template: auto auto / auto auto;
-  grid-template-areas: "text text" "nominee button-block";
+  grid-template-areas:
+  "text"
+  "nominee"
+  "button-block";
   grid-gap: 1rem;
 
   align-items: center;
   margin-bottom: 2rem;
-
-  width: 100%;
-  max-width: 730px;
 }
 
 .nominee-block {
+  @include font-headline-small-roboto;
+
   grid-area: nominee;
 
-  display: grid;
-  grid-template: 1fr / auto 1fr;
-  grid-gap: 1rem;
-  justify-self: stretch;
-  align-items: center;
-  padding: 0 1rem;
-  height: px-to-rem(48px);
-  border-radius: 4px;
-  border: solid 1px $border-color;
-
-  font-family: $font-family-roboto;
-  font-size: 16px;
   color: $neu-charcoal-grey;
+
+  display: grid;
+  grid-gap: .5em;
+  padding: .8em;
+  border-radius: 4px;
+  border: solid 1px $neu-light-blue-grey-two;
+
+  word-break: break-word;
+
+  .nominee-name {
+    font-weight: bold;
+  }
+
+  .nominee-address {
+    font-size: .8em;
+  }
 }
 
 .text {
-  margin: 0;
   grid-area: text;
+  margin-bottom: 0;
 }
 
 .button {
   grid-area: button-block;
+  justify-self: flex-start;
 }
 
 
